Fixed css alignment. Better copy

--- a/src/index.less
+++ b/src/index.less
@@ -1,20 +1,14 @@
-@import "../bower_components/semantic-ui/src/semantic.less";
 // @import "/bower_components/semantic-ui/dist/semantic.min.css";
-
-
+@import "../bower_components/semantic-ui/src/semantic.less";
 body {
   background-color: #dadada;
-}
-body > .grid {
-  height: 100%;
-}
-.image {
-  margin-top: -100px;
-}
-.column {
-  max-width: 650px;
-}
-
-.message > pre {
-  text-align: left;
+  .ui.container {
+    margin-top: 1em;
+    .column {
+      max-width: 650px;
+    }
+    .message > pre {
+      text-align: left;
+    }
+  }
 }
